Reverted the changes.

--- a/dubai.html
+++ b/dubai.html
@@ -20,7 +20,7 @@
                     <li> <a href="../travel/rome.html">Rome</a></li>
                     <li> <a href="../travel/istanbul.html">Istanbul</a></li>
                     <li> <a href="../travel/borabora.html">Bora Bora</a></li>
-                    <li> <a href="../travel/seychelles.html">Seychelle</a></li>
+                    <li> <a href="../travel/seychelles.html">Seychelles</a></li>
                 </ul>
             </nav>
         </header>
